force-app/main/default/objects/Incident_Report__c/Incident_Report__c.object-meta.xml
<CustomObject>
    <label>Incident Report</label>
    <pluralLabel>Incident Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <displayFormat>RPT-{00000}</displayFormat>
        <label>Report Number</label>
        <type>AutoNumber</type>
    </nameField>
</CustomObject>