force-app/main/default/objects/Incident_Report__c/fields/Citizen__c.field-meta.xml
<CustomField>
    <fullName>Citizen__c</fullName>
    <label>Citizen</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Incident Reports</relationshipLabel>
    <relationshipName>Incident_Reports</relationshipName>
</CustomField>