force-app/main/default/objects/Incident_Report__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Routing Department</label>
    <type>Lookup</type>
    <referenceTo>Department__c</referenceTo>
    <relationshipLabel>Incident_Reports</relationshipLabel>
    <relationshipName>Incident_Reports</relationshipName>
</CustomField>