force-app/main/default/objects/Incident_Report__c/fields/Incident__c.field-meta.xml
<CustomField>
    <fullName>Incident__c</fullName>
    <label>Incident</label>
    <type>Lookup</type>
    <referenceTo>Incident__c</referenceTo>
    <relationshipLabel>Incident Reports</relationshipLabel>
    <relationshipName>Incident_Reports</relationshipName>
</CustomField>