force-app/main/default/objects/Incident_Report__c/fields/Incident_Type__c.field-meta.xml
<CustomField>
    <fullName>Incident_Type__c</fullName>
    <label>Incident Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Pothole</fullName></value>
            <value><fullName>Broken Streetlight</fullName></value>
            <value><fullName>Graffiti</fullName></value>
            <value><fullName>Fallen Tree</fullName></value>
            <value><fullName>Water Leak</fullName></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>